# carma-platform

./: .dockerignore  .gitignore  .travis.yml  ATTRIBUTION.md  ATTRIBUTION.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Code_of_Conduct.md  Contributing.md  Detail_Design.md  Dockerfile  Doxyfile  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  carma-platform.repos  carma_build  carma_build.bash  cdasim.repos  circle.yml  mkdocs.yaml  pre_build  remote_install.bash  rsu-obu-setup.sh
arbitrator/: CMakeLists.txt  package.xml
arbitrator/config/: arbitrator_params.yaml
arbitrator/include/: arbitrator.hpp  arbitrator_config.hpp  arbitrator_node.hpp  arbitrator_state_machine.hpp  arbitrator_utils.hpp  beam_search_strategy.hpp  capabilities_interface.hpp  capabilities_interface.tpp  cost_function.hpp  cost_system_cost_function.hpp  fixed_priority_cost_function.hpp  neighbor_generator.hpp  planning_strategy.hpp  plugin_neighbor_generator.hpp  plugin_neighbor_generator.tpp  search_strategy.hpp  tree_planner.hpp  vehicle_state.hpp
arbitrator/launch/: arbitrator.launch  arbitrator.launch.py
arbitrator/src/: arbitrator.cpp  arbitrator_node.cpp  arbitrator_state_machine.cpp  arbitrator_utils.cpp  beam_search_strategy.cpp  capabilities_interface.cpp  cost_system_cost_function.cpp  fixed_priority_cost_function.cpp  main.cpp  plugin_neighbor_generator.cpp  tree_planner.cpp
arbitrator/test/: test_arbitrator_state_machine.cpp  test_beam_search_strategy.cpp  test_fixed_priority_cost_function.cpp  test_main.cpp  test_plugin_neighbor_generator.cpp  test_tree_planner.cpp  test_utils.h
autoware_plugin/: CMakeLists.txt  package.xml
autoware_plugin/config/: parameters.yaml
autoware_plugin/include/: autoware_plugin.h
autoware_plugin/launch/: autoware_plugin.launch
autoware_plugin/src/: autoware_plugin.cpp  main.cpp
autoware_plugin/test/: test_autoware_plugin.cpp
basic_autonomy/: CMakeLists.txt  README.md  package.xml
basic_autonomy/src/: basic_autonomy.cpp  helper_functions.cpp
basic_autonomy/test/: test_waypoint_generation.cpp
bsm_generator/: CMakeLists.txt  README.md  package.xml
bsm_generator/config/: parameters.yaml
bsm_generator/include/: bsm_generator.h  bsm_generator_worker.h
bsm_generator/launch/: bsm_generator.launch  bsm_generator_launch.py
bsm_generator/src/: bsm_generator.cpp  bsm_generator_node.cpp  bsm_generator_worker.cpp  main.cpp  script.bash
bsm_generator/test/: test_bsm_generator_worker.cpp
can_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
can_msgs/msg/: CanState.msg  Frame.msg
carla_sensors_integration/: CMakeLists.txt  package.xml
carla_sensors_integration/include/: carla_sensors_integration.h  carla_sensors_integration_node.h  carla_sensors_integration_worker.h
carla_sensors_integration/launch/: carla_sensors_integration.launch
carla_sensors_integration/src/: carla_sensors_integration.cpp  carla_sensors_integration_node.cpp  carla_sensors_integration_worker.cpp  main.cpp
carla_sensors_integration/test/: test_carla_sensors.cpp
carma/: CMakeLists.txt  package.xml
carma/config/: bridge.yml  rosbag2_qos_overrides.yaml
carma/launch/: .carma.env.swp  carma.env  carma_launch_src.bash  carma_src.launch  carma_src.launch.py  drivers.launch  drivers.launch.py  environment.launch  environment.launch.py  environment.py  get_log_level.py  guidance.launch  guidance.launch.py  hardware_interface.launch  hardware_interface.launch.py  localization.launch  localization.launch.py  message.launch  message.launch.py  mock_drivers.launch  plugins.launch  plugins.launch.py  ros2_environment.py  ros2_rosbag.launch.py  rosbag_record.launch  transforms.launch  transforms.launch.py  ui.launch  ui.launch.py
carma/routes/: tfhrc-waypoints-demo-0930.csv
carma/rviz/: carma_default.rviz  carma_default_ros2.rviz
carma/scripts/: generate_log_name.sh  get_log_level.py  pose_offset_node.py
carma/test/: transform_server_integration.test
carma_base/: Dockerfile  build-image.sh  entrypoint.sh  init-env.sh  package.xml
carma_cooperative_perception/: .clang-tidy  CMakeLists.txt  CPPLINT.cfg  README.md  cmake_options.cmake  dependencies.cmake  package.xml
carma_cooperative_perception/cmake/: FindPROJ4.cmake  get_cpm.cmake
carma_cooperative_perception/config/: cp_host_vehicle_filter_node.yaml  cp_multiple_object_tracker_node.yaml  cp_sdsm_to_detection_list_node.yaml  params.yaml
carma_cooperative_perception/docs/: bsm_filter_node.md  bsm_to_detection_list_node.md  external_object_list_to_detection_list_node.md  external_object_list_to_sdsm_node.md  host_vehicle_filter_node.md  multiple_object_tracker_node.md  package_design.md  sdsm_to_detection_list_node.md  stack_architecture.md  stack_design.md  track_list_to_external_object_list_node.md
carma_cooperative_perception/launch/: cooperative_perception_launch.py
carma_cooperative_perception/src/: detection_list_viz_component.cpp  detection_list_viz_node.cpp  external_object_list_to_detection_list_component.cpp  external_object_list_to_detection_list_node.cpp  external_object_list_to_sdsm_component.cpp  external_object_list_to_sdsm_node.cpp  geodetic.cpp  host_vehicle_filter_component.cpp  host_vehicle_filter_node.cpp  j2735_types.cpp  j3224_types.cpp  msg_conversion.cpp  multiple_object_tracker_component.cpp  multiple_object_tracker_node.cpp  sdsm_to_detection_list_component.cpp  sdsm_to_detection_list_node.cpp  track_list_to_external_object_list_component.cpp  track_list_to_external_object_list_node.cpp  utm_zone.cpp
carma_ndt_matching/: CMakeLists.txt  package.xml
carma_ndt_matching/src/: main.cpp
carma_record/: CMakeLists.txt  package.xml
carma_ros2_utils/: CMakeLists.txt  README.md  dependencies.cmake  package.xml
carma_utils/: CMakeLists.txt  package.xml
carma_wm/: CMakeLists.txt  README.md  latlon_list.csv  package.xml  wp_list.csv
carma_wm_ctrl/: CMakeLists.txt  README.md  package.xml
carmajava/: CMakeLists.txt  build.gradle  gradlew  package.xml  rosjava_bootstrap.gradle  run_tests.bash  settings.gradle
cav_driver_utils/: CMakeLists.txt  package.xml
(+5283 files in other folders)
