<?xml version="1.0"?>

<!--  
 Copyright (C) 2018-2021 LEIDOS.

 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
 the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 License for the specific language governing permissions and limitations under
 the License.
-->

<package format="3">
  <name>bsm_generator</name>
  <version>3.3.0</version>
  <description>This generates BSM according to J2735 standard.</description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache License 2.0</license>
  <author email="carma@todo.todo">carma</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cav_msgs</depend>
  <depend>carma_utils</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pacmod_msgs</depend>
  <depend>j2735_msgs</depend>
  <depend>wgs84_utils</depend>
  <depend>lanelet2_extension</depend>
</package>
